--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="title">
-            <h1>A+A Recipes</h1>
-        </div>
-        <div class="list">
-            <ul>
-                <li><a href="./recipe-pages/banana-bread.html">Banana Bread</a></li>
-                <li><a href="./recipe-pages/carne-con-verduras.html">Carne con Verduras</a></li>
-                <li><a href="./recipe-pages/tres-leches-cake.html">Tres Leches Cake</a></li>
-            </ul>
+        <div class="container">
+            <div class="title">
+                <h1>A+A Recipes</h1>
+            </div>
+            <div class="list">
+                <ul>
+                    <li><a href="./recipe-pages/banana-bread.html">Banana Bread</a></li>
+                    <li><a href="./recipe-pages/carne-con-verduras.html">Carne con Verduras</a></li>
+                    <li><a href="./recipe-pages/tres-leches-cake.html">Tres Leches Cake</a></li>
+                </ul>
+            </div>
         </div>
     </body>
 </html>
