--- a/recipe-pages/banana-bread.html
+++ b/recipe-pages/banana-bread.html
@@ -6,39 +6,43 @@
         <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <div class="home">
-            <a href="../index.html">Home</a>
+        <div class="container">
+            <div class="home">
+                <a href="../index.html">Home</a>
+            </div>
+            <div class="title">
+                <h1>Banana Bread</h1>
+            </div>
         </div>
-        <div class="title">
-            <h1>Banana Bread</h1>
-        </div>
-        <div class="title">
-            <h2>Ingredients</h2>
-        </div>
-        <div class="list">
-            <ul>
-                <li>3 very ripe bananas</li>
-                <li>1 tspn baking soda</li>
-                <li>1 pinch of salt</li>
-                <li>1 cup of sugar</li>
-                <li>2 eggs</li>
-                <li>1 tspn vanilla</li>
-                <li>1 1/2 cup flour</li>
-                <li>1/3 cup melted butter</li>
-                <li>Walnuts to your liking</li>
-            </ul>
-        </div>
-        <div class="title">
-            <h2>Instructions</h2>
-        </div>
-        <div class="list">
-            <ol>
-                <li>Preheat oven 350 degrees F.</li>
-                <li>Mash bananas until smooth.</li>
-                <li>Add melted butter, baking soda, salt, sugar, egg, vanilla, and flour. Mix.</li>
-                <li>Pour mix into buttered pan.</li>
-                <li>Bake 1 hr.</li>
-            </ol>
+        <div class="container">
+            <div class="title">
+                <h2>Ingredients</h2>
+            </div>
+            <div class="list">
+                <ul>
+                    <li>3 very ripe bananas</li>
+                    <li>1 tspn baking soda</li>
+                    <li>1 pinch of salt</li>
+                    <li>1 cup of sugar</li>
+                    <li>2 eggs</li>
+                    <li>1 tspn vanilla</li>
+                    <li>1 1/2 cup flour</li>
+                    <li>1/3 cup melted butter</li>
+                    <li>Walnuts to your liking</li>
+                </ul>
+            </div>
+            <div class="title">
+                <h2>Instructions</h2>
+            </div>
+            <div class="list">
+                <ol>
+                    <li>Preheat oven 350 degrees F.</li>
+                    <li>Mash bananas until smooth.</li>
+                    <li>Add melted butter, baking soda, salt, sugar, egg, vanilla, and flour. Mix.</li>
+                    <li>Pour mix into buttered pan.</li>
+                    <li>Bake 1 hr.</li>
+                </ol>
+            </div>
         </div>
     </body>
 </html>
